--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "chai": "^3.5.0",
     "http-server": "^0.9.0",
     "mocha": "^2.5.3",
+    "mustache": "^2.2.1",
     "sinon": "^1.17.4",
     "zombie": "^4.2.1"
   }
